apps/desktop/src-tauri/tests/snapshots/ipc_shape__heron_update_action_item__patch_clear_fields.snap
---
source: apps/desktop/src-tauri/tests/ipc_shape.rs
assertion_line: 193
expression: value
---
{
  "done": false,
  "due": null,
  "owner": null,
  "text": null
}
