apps/desktop/src-tauri/tests/snapshots/ipc_shape__heron_update_action_item__patch_default_serialized.snap
---
source: apps/desktop/src-tauri/tests/ipc_shape.rs
assertion_line: 224
expression: value
---
{
  "done": null,
  "due": null,
  "owner": null,
  "text": null
}
