apps/desktop/src-tauri/tests/snapshots/ipc_shape__heron_update_action_item__response_nullable_fields.snap
---
source: apps/desktop/src-tauri/tests/ipc_shape.rs
assertion_line: 235
expression: value
---
{
  "done": false,
  "due": null,
  "id": "22222222-2222-7222-8222-222222222222",
  "owner": null,
  "text": "Decide on launch date"
}
